# tl-py

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  setup.cfg  setup.py
temporal_logic/: types.py
temporal_logic/signal_tl/: __init__.py
temporal_logic/signal_tl/core/: __init__.py  atoms.py  base.py  basic_ops.py  temporal_ops.py
temporal_logic/signal_tl/grammar/: __init__.py  atoms.py  basic_ops.py  expression.py  temporal_ops.py
temporal_logic/signal_tl/monitors/: __init__.py  base.py  classic_robustness.py  efficient_robustness.py  lti_semantics.py
temporal_logic/signal_tl/semantics/: __init__.py  base.py  classic_robustness.py  efficient_robustness.py  filtering.py  online_monitoring.py
temporal_logic/signal_tl/utils/: minmax.py
