[tool.poetry]
name = "temporal-logic"
version = "0.1.1"
description = "A Python package for all things Temporal Logic"
authors = ["Anand Balakrishnan <anandbal@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
sympy = "^1.3"
pandas = "^0.24.1"
numpy = "^1.16"
scipy = "^1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
autopep8 = "^1.4"
rope = "^0.11.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
