[tool.poetry]
name = "temporal-logic"
version = "0.1.3"
description = "A Temporal Logic package for Python using Pythonic constructs"
authors = ["Anand Balakrishnan <anandbal@usc.edu>"]

readme = "README.md"
repository = "https://github.com/anand-bala/tl-py/"

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.16"
scipy = "^1.2"
sympy = "^1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
autopep8 = "^1.4"
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
