[metadata]
name = temporal-logic
version = 0.2.0
summary = A Python package for all things Temporal Logic
long_description = file: README.md, LICENSE
author = Anand Balakrishnan
author-email = anandbal@usc.edu
license = MIT License

classifier =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  sympy ~= 1.5
  pandas ~= 1.0.0
  numpy ~= 1.18
  scipy ~= 1.4
python_requires = ~= 3.5





