[metadata]
name = temporal-logic
version = 0.1.4

author = Anand Balakrishnan
author_email = anandbal@usc.edu
url = "https://github.com/anand-bala/tl-py"

description = A Temporal Logic package for Python using Pythonic constructs
long_description = file: README.md, USAGE.md

[options]
python_requires = ~= 3.6
install_requires =
  numpy ~= 1.17
  scipy ~= 1.4
  sympy ~= 1.5
tests_require =
  "py-metric-temporal-logic"
  
[options.extras_require]
dev =
  python-language-server[all]
  metric-temporal-logic

