[metadata]
name = temporal-logic
version = 0.1.4

author = Anand Balakrishnan
author_email = anandbal@usc.edu
url = "https://github.com/anand-bala/tl-py"

description = A Temporal Logic package for Python using Pythonic constructs
long_description = file: README.md, USAGE.md

[options]
python_requires = ~= 3.6
packages = find:
install_requires =
  numpy ~= 1.17
  scipy ~= 1.4
  sympy ~= 1.5
  numba ~= 0.49
tests_require =
  "py-metric-temporal-logic"

[options.extras_require]
dev =
  python-language-server[all]
  metric-temporal-logic

[mypy]
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[flake8]
max-line-length = 88
ignore = E501, E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git
    __pycache__
    build
    dist
    releases
    .venv
    .tox
    .mypy_cache
    .pytest_cache

[isort]
line_length=88
multi_line_output=3
length_sort=1


